# llmopt

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
checkpoints/: dispatcher.pt  dispatcher_v2.pt  dispatcher_v3.pt  dispatcher_v4.pt  engine_regret_probe.pt  magic_estimator.pt  magic_estimator_rf.pt  magic_estimator_v5.pt  magic_estimator_v6.pt  magic_estimator_v7.pt  markov_prior.json  nnue_eval.pt  pred_syndromes.pt  pred_syndromes_emb.pt  pred_syndromes_emb_orb.pt  pred_syndromes_l15.pt  router_stats.json  rule_gate.pt  syndrome_decoder.pt  syndrome_policy.pt  value_head.pt  weight_reader_results.json  zx_markov_prior.json  zx_markov_prior_v2.json
data/: champion_harvest.jsonl  dispatch_labels_3080.jsonl  dispatch_labels_mac.jsonl  dispatch_labels_v2_3080.jsonl  dispatch_labels_v2_mac.jsonl  dispatch_labels_v3_mac.jsonl  dispatch_labels_v4.jsonl  dispatch_labels_v4_all.jsonl  dispatch_labels_v4b.jsonl  engine_regret_labels.jsonl  flash_tile_labels.jsonl  frontier_gaps.jsonl  frontier_gaps_v2.jsonl  frontier_r1.jsonl  frontier_r1_roots.json  int4_config_labels.jsonl  l67_probe.jsonl  magic_labels.jsonl  magic_labels_all.jsonl  magic_labels_all_rf.jsonl  magic_labels_big_l123.jsonl  magic_labels_big_l45.jsonl  magic_labels_cur.jsonl  magic_labels_cur_rf.jsonl  magic_labels_l123.jsonl  magic_labels_l45.jsonl  magic_labels_l5_v2.jsonl  magic_labels_l5_v3.jsonl  magic_labels_l8.jsonl  magic_labels_l8_v2.jsonl  magic_labels_rf.jsonl  magic_labels_v5_all.jsonl  magic_labels_v5_l45.jsonl  magic_labels_v5_l45_mac.jsonl  magic_labels_v6.jsonl  (+44 more)
(+421 files in other folders)
