[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmopt"
version = "0.1.0"
description = "Inference optimization lab: speculative decoding, prompt-lookup, radix KV cache, per-layer quant sensitivity + bit allocator"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Artin Azizi" }]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["llmopt*"]
